compiler/testData/diagnostics/tests/script/AccessForwardDeclarationInScript.kts
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL

val x = <!UNINITIALIZED_VARIABLE!>y<!>

val y = 2
